<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_share"
        android:title="@string/appbar_menu_1"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item android:id="@+id/shareMain"
        android:title="@string/appbar_menu_2"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        />

    <item android:id="@+id/showMap"
        android:title="@string/appbar_menu_3"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_white_24dp"
         />

    <item
        android:id="@+id/edit"
        android:title="@string/appbar_menu_4"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_white_24dp"
        />
    <item
        android:id="@+id/addPhoto"
        android:title="@string/appbar_menu_5"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_white_24dp"
        />
</menu>