<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/favorite_place"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite_place" />
        <!--
        <item
            android:id="@+id/open_loaction"
            android:icon="@drawable/ic_screen_share_black_24dp"
            android:title="@string/open_location"/>

        <item
            android:id="@+id/popular_location"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/poular_location" />

        <item
            android:id="@+id/people"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/people" />
        -->
    </group>

    <item
        android:id="@+id/other_options"
        android:title="@string/support">

        <menu>
            <item
                android:id="@+id/theme"
                android:icon="@drawable/ic_view_comfy_black_24dp"
                android:title="@string/str_msg_25" />

            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting" />
        </menu>
    </item>
</menu>